<resources>
    <string name="app_name">WaterApp</string>

    <string name="today_title">Сегодня вы выпили</string>
    <string name="count_water">%1$d мл.</string>
    <string name="count_water_liters">%1$d л. %2$d мл.</string>
    <string name="change_volume">Изменить объём</string>
    <string name="history">История</string>
    <string name="glass_title">Нажмите чтобы добавить</string>
    <string name="apply">Применить</string>
    <string name="input_value_hint">Объём, мл.</string>
    <string name="input_time_hint">ЧЧ:ММ</string>
</resources>