<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivHandle"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bottom_handle" />

    <EditText
        android:id="@+id/tiInputValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:hint="@string/input_value_hint"
        android:textColor="@color/main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHandle" />

    <EditText
        android:id="@+id/tdInputDate"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_small"
        android:hint="@string/input_time_hint"
        android:inputType="datetime"
        android:textColor="@color/main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiInputValue" />

    <View
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/delimiter_height"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginBottom="@dimen/space_small"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/btnApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tdInputDate" />

    <Button
        android:id="@+id/btnApply"
        style="@style/Button"
        android:layout_width="@dimen/match_constraint"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>