<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTodayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:text="@string/today_title"
        android:textColor="@color/dip_blue"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCountWater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:text="450 мл."
        android:textColor="@color/dip_blue"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTodayTitle"
        tools:text="450 мл." />

    <TextView
        android:id="@+id/tvGlassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:text="@string/glass_title"
        android:textColor="@color/light_grey"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="@+id/ivWaterGlass"
        app:layout_constraintStart_toStartOf="@+id/ivWaterGlass"
        app:layout_constraintTop_toTopOf="@+id/ivWaterGlass" />

    <ImageView
        android:id="@+id/ivWaterGlass"
        android:layout_width="218dp"
        android:layout_height="307dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCountWater"
        app:srcCompat="@drawable/water" />

    <TextView
        android:id="@+id/tvGlassVolume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_small"
        android:text="200 мл."
        android:textColor="@color/light_grey"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/ivWaterGlass"
        app:layout_constraintEnd_toEndOf="@+id/ivWaterGlass"
        app:layout_constraintStart_toStartOf="@+id/ivWaterGlass" />

    <Button
        android:id="@+id/btnChangeVolume"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_small"
        android:backgroundTint="@color/main_blue"
        android:text="@string/change_volume"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWaterGlass"
        app:layout_constraintVertical_bias="0.117" />

    <View
        android:layout_width="@dimen/match_constraint"
        android:layout_height="@dimen/delimiter_height"
        android:layout_marginBottom="@dimen/space_small"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/btnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHistory"
        style="@style/Button"
        android:layout_width="@dimen/match_constraint"
        android:layout_margin="@dimen/space_small"
        android:backgroundTint="@color/main_blue"
        android:text="@string/history"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>